<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/my_cart"/>
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/my_wishlist"/>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_Settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings"/>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rate_review_black_24dp"
                android:title="@string/rate_us"/>
        </menu>
    </item>

</menu>
