<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/product_detail_margin_bottom">

        <android.support.v7.widget.CardView
            android:id="@+id/imageCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/productImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_product_detail_size"
                tools:src="@drawable/ic_menu_camera"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/small_margin"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/productNameCard"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageCard"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/productName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="LG Microwave"
                    android:textSize="20sp"
                    android:textColor="#100C08"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:layout_marginStart="@dimen/normal_margin"/>

                <TextView
                    android:id="@+id/productSellingPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/productName"
                    tools:text="Rs. 7000"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:layout_alignLeft="@+id/productName"
                    android:layout_alignStart="@+id/productName"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/productActualPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/productSellingPrice"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_toEndOf="@+id/productSellingPrice"
                    android:layout_toRightOf="@+id/productSellingPrice"
                    tools:text="@string/actualPrice"
                    android:textSize="17sp"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/darker_gray"
                    android:typeface="sans"
                    android:textStyle="normal|italic"/>

                <TextView
                    android:id="@+id/productDiscount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/productSellingPrice"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_toEndOf="@+id/productActualPrice"
                    android:layout_toRightOf="@+id/productActualPrice"
                    tools:text = "20% off"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorDiscount"/>
                <Button
                    android:id="@+id/productFAV"
                    android:drawableLeft="@drawable/ic_favorite_border_black_24dp"
                    android:drawableStart="@drawable/ic_favorite_border_black_24dp"
                    android:text="@string/add_to_wishlist"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/normal_margin"
                    android:drawablePadding="@dimen/small_margin"
                    android:elevation="0dp"
                    android:background="#ffffff"
                    android:layout_alignLeft="@+id/productName"
                    android:layout_alignStart="@+id/productName"
                    android:layout_below="@+id/productSellingPrice"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"

            android:layout_below="@+id/productNameCard">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/detailsHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    android:textSize="18sp"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:textColor="#000000"/>
                <View
                    android:id="@+id/detailsDivider"
                    android:layout_below="@+id/detailsHeading"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:layout_marginRight="@dimen/normal_margin"
                    android:layout_alignLeft="@+id/detailsHeading"
                    android:layout_alignStart="@+id/detailsHeading"
                    />
                <TextView
                    android:id="@+id/detailsWarrenty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/warrenty_na"
                    android:layout_below="@+id/detailsDivider"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="2dp"
                    android:textSize="16sp"
                    android:layout_alignLeft="@+id/detailsHeading"
                    android:layout_alignStart="@+id/detailsHeading"/>
                <TextView
                    android:id="@+id/detailsSeller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seller_na"
                    android:layout_below="@+id/detailsWarrenty"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="2dp"
                    android:textSize="16sp"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:layout_marginStart="@dimen/normal_margin"/>
                <TextView
                    android:id="@+id/detailsReview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/review_na"
                    android:layout_below="@+id/detailsSeller"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="2dp"
                    android:textSize="16sp"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:layout_marginStart="@dimen/normal_margin"/>
                <TextView
                    android:id="@+id/detailsInStock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/in_stock_na"
                    android:layout_below="@+id/detailsReview"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="2dp"
                    android:textSize="16sp"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:layout_marginStart="@dimen/normal_margin"/>


            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>